--- a/css/modules/desktop.css
+++ b/css/modules/desktop.css
@@ -1,3 +1,6 @@
+
+@media screen and (min-width: 600px) {
+
 body {
         background-color: hsl(30, 38%, 92%);
         width: 100vw;
@@ -7,7 +10,7 @@ body {
 
 main{
         margin: 100px auto;
-        width: 650px;
+        max-width: 650px;
         height: 450px;
         padding: 0px;
         background-color: white;/*hsl(30, 38%, 92%)*/;
@@ -24,7 +27,6 @@ main{
         border-radius: 10px 0px 0px 10px;
         width: 100%;
         margin: 0;
-        flex: 1;
     }
 
     button {
@@ -43,7 +45,6 @@ main{
 .product_info{
         background-color: hsl(0, 0%, 100%);
         padding: 30px;
-        flex: 1;
     }
 
     .current-price {
@@ -83,3 +84,4 @@ main{
         letter-spacing: 4px;
         font-family: Fraunces;
     }
+}
