--- a/css/modules/mobile.css
+++ b/css/modules/mobile.css
@@ -16,6 +16,7 @@
         background-color: hsl(30, 38%, 92%);
         display: flex;
         flex-direction: column;
+        border-radius: 10px;
     }
 
     .mobimg{
@@ -30,6 +31,7 @@
     .product_info{
         background-color: hsl(0, 0%, 100%);
         padding: 20px;
+        border-radius: 10px;
     }
 
     .current-price {
